yaml-demo/yaml示例/ingress_nginx/my_yaml/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-mynginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: test.nginx.com
    http:
      paths:
      - path: 
        backend:
          serviceName: nginx-svc
          servicePort: 80
